--- a/Assesment_Week_2/.project
+++ b/Assesment_Week_2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assesment_Week_2_Finished</name>
+	<name>Assesment_Week_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
